tools/tests/errors/surf_num_06.ki
# Float() of non-numeric text must raise a clear conversion error.
discard Float("abc")
